--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "adm-zip": "~0.4.4",
     "lodash": "~2.4.1",
     "svgicons2svgfont": "0.0.9",
-    "temp": "^0.7.0"
+    "temp": "^0.7.0",
+    "svg2ttf": "~1.1.2"
   }
 }
