--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "~2.4.1",
     "svgicons2svgfont": "0.0.9",
     "temp": "^0.7.0",
-    "svg2ttf": "~1.1.2"
+    "svg2ttf": "~1.1.2",
+    "ttf2eot": "~1.3.0"
   }
 }
