--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "svgicons2svgfont": "0.0.9",
     "temp": "^0.7.0",
     "svg2ttf": "~1.1.2",
-    "ttf2eot": "~1.3.0"
+    "ttf2eot": "~1.3.0",
+    "ttf2woff": "~1.2.0"
   }
 }
